Fix Horizontal Scroll
I noticed this website had a horizontal scroll at almost every screen size. This change seems to fix it at every screen size.

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,13 @@
 *{
     box-sizing: border-box;
     font-family: 'Comfortaa', cursive;
+
 }
+
+.App {
+    overflow: hidden;
+}
+
 .Container{
     max-width: 1000px;
     width: 100%;
